--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
 jupyterlab>3.0
+torch
+torchvision
+numpy
+pandas
+torchaudio
+ultralytics
+opencv-python
+tqdm
+matplotlib
+pycocotools
+albumentations
+scikit-learn
+Pillow
+seaborn
+tensorboard
+onnx
+onnxruntime
+thop
+torchsummary
+optuna
